fix height issue when scrolling on mobile devices

--- a/src/app/flight-map/view/ng-components/flight-map-page/flight-map-page.component.css
+++ b/src/app/flight-map/view/ng-components/flight-map-page/flight-map-page.component.css
@@ -1,6 +1,6 @@
 .base-map-container {
-    width: 100vw;
-    height: calc(100vh - 54px);
+    width: 100%;
+    height: 100%;
 }
 
 .zoom-buttons-pos {
