--- a/src/app/flight-map/view/ng-components/ol-map-overlay/ol-map-overlay.component.css
+++ b/src/app/flight-map/view/ng-components/ol-map-overlay/ol-map-overlay.component.css
@@ -1,5 +1,5 @@
 .overlay-tab-content {
-    max-height: 30vh;
+    max-height: 30%;
     overflow-y: auto;
 }
 /deep/ .mat-tab-label {
