--- a/src/app/flightroute/view/ng-components/flightroute-page/flightroute-container/flightroute-container.component.css
+++ b/src/app/flightroute/view/ng-components/flightroute-page/flightroute-container/flightroute-container.component.css
@@ -3,7 +3,7 @@
 }
 
 ::ng-deep .mat-autocomplete-panel {
-    max-height: 75vh !important;
+    max-height: 75% !important;
 }
 
 .route-comments {
